--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 					<!-- Links del Menu -->
 					<ul class="nav navbar-nav">
-						<li><a href="#">Inicio</a></li>
+						<li><a href="#" id="show-home">Inicio</a></li>
 						<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Productos <span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -223,148 +223,16 @@
         </div>
       </div>
     </div>
-    <div class="container ">
-      <!-- Carousel -->
-      <!-- <div class="row">
-        <div class="col-md-12">
-          <div id="slider" class="carousel slide" data-ride="carousel">Estas clases son propias de bootstrap
-            <!-- Indicadores de posicion -->
-            <!-- <ol class="carousel-indicators">
-              <li data-target="#slider" data-slide-to="0" class="active"></li>
-              <li data-target="#slider" data-slide-to="1"></li>
-              <li data-target="#slider" data-slide-to="2"></li>
-            </ol> -->
-
-            <!-- Contenedor de Sliders -->
-            <!-- <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="https://dummyimage.com/600x400/301/fff" alt="">
-              </div>
-              <div class="item">
-                <img src="https://dummyimage.com/600x400/643/fff" alt="">
-              </div>
-              <div class="item">
-                <img src="https://dummyimage.com/600x400/603/fff" alt="">
-              </div>
-            </div> -->
-
-            <!-- Controles -->
-            <!-- <a href="#slider" class="left carousel-control" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-              <span class="sr-only">Anterior</span>
-            </a>
-            <a href="#slider" class="right carousel-control" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
-              <span class="sr-only">Siguiente</span>
-            </a>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="row ">
-        <div class="col-md-12">
-          <div class="page-header">
-            <h1 class="text-center">Productos</h1>
-          </div>
-        </div> -->
-        <!-- Inicia la sección de imágenes fijas -->
-        <!-- Primera fila (en modo de escritorio 2 imágenes) -->
-        <!-- <div class="row ">
-          <div class="col-xs-12 col-sm-6 col-md-6 ">
-            <div class="thumbnail  img-complete" id="img0">
-              <a href="#">
-              </a>
-              <div class="caption">
-                <h3 id="name0"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price0"></h2>
-                <p>
-                  <a href="#" class="btn btn-primary">Comprar</a>
-                  <a href="#" class="btn btn-default">Detalles</a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6">
-          <div class="thumbnail img-complete"id="img1">
-            <a href="#">
-            </a>
-            <div class="caption">
-              <h3 id="name1"></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <h2 id="price1"></h2>
-              <p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-                <a href="#" class="btn btn-default">Detalles</a>
-              </p>
-            </div>
-          </div>
-        </div>
-        </div> -->
-
-        <!-- Segunda fila (en modo de escritorio 2 imágenes) -->
-        <!-- <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-6">
-            <div class="thumbnail img-complete" id="img2">
-              <a href="#">
-              </a>
-              <div class="caption ">
-                <h3 id="name2"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price2"></h2>
-                <p>
-                  <a href="#" class="btn btn-primary">Comprar</a>
-                  <a href="#" class="btn btn-default">Detalles</a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6">
-            <div class="thumbnail img-complete" id="img3">
-              <a href="#">
-              </a>
-              <div class="caption ">
-                <h3 id="name3"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price3"></h2>
-                <p>
-                  <a href="#" class="btn btn-primary">Comprar</a>
-                  <a href="#" class="btn btn-default">Detalles</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- Tercera fila (en modo escritorio 1 imágen) -->
-        <!-- <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="thumbnail img-complete " id="img4">
-              <a href="#">
-              </a>
-              <div class="caption">
-                <h3 id="name4"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price4"></h2>
-                <p>
-                  <a href="#" class="btn btn-primary">Comprar</a>
-                  <a href="#" class="btn btn-default">Detalles</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
+    <div class="container" id="result-search">
         <!--Primera fila (en modo de escritorio 4 imágenes)  -->
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+            <div class="img-result">
               <a href="#">
                 <img id="img10"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name10"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name10"></h5>
                 <h2 id="price10"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -375,13 +243,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img11"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name11"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name11"></h5>
                 <h2 id="price11"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -392,13 +259,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img12"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name12"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name12"></h5>
                 <h2 id="price12"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -409,13 +275,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img13"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name13"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name13"></h5>
                 <h2 id="price13"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -428,15 +293,14 @@
 
         </div>
         <!--Segunda fila (en modo de escritorio 4 imágenes)  -->
-        <div class="row">
+        <div class="row" >
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+            <div class="img-result">
               <a href="#">
                 <img id="img14"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name14"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name14"></h5>
                 <h2 id="price14"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -447,13 +311,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img15"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name15"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name15"></h5>
                 <h2 id="price15"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -464,13 +327,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img16"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name16"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name16"></h5>
                 <h2 id="price16"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -481,13 +343,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img17"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name17"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name17"></h5>
                 <h2 id="price17"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -496,19 +357,16 @@
               </div>
             </div>
           </div>
-
-
         </div>
         <!--Tercera fila (en modo de escritorio 4 imágenes)  -->
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+            <div class="img-result">
               <a href="#">
                 <img id="img18"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name18"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name18"></h5>
                 <h2 id="price18"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -519,13 +377,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img19"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name19"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name19"></h5>
                 <h2 id="price19"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -536,13 +393,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img20"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name20"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name20"></h5>
                 <h2 id="price20"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
@@ -553,13 +409,12 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail" >
+            <div class="img-result" >
               <a href="#">
                 <img id="img21"  alt="">
               </a>
-              <div class="caption">
-                <h3 id="name21"></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <div class="info-results">
+                <h5 id="name21"></h5>
                 <h2 id="price21"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
